index.css
* {
    background-color: #f1eff0;
    box-sizing: border-box;
    font-family: 'Playfair Display', serif;
    color: #d64309;
}
/* .topClickable {
    list-style: none;
}
.topNav {
    display: inline-block;
    
    top: 0;
    position: fixed;
    width: 100%;
    height: auto;
    padding: 15px;
    margin: 10px;

    
    background-color: rgba(255, 255, 255, 0.479);

} */
/* nav ul.topClickable {
    float: right;
    margin: 15px;
    display: flex;
    justify-content: right;
    align-items: flex-end;
}
.clickable {
    padding: 20px;
    font-size: 16px;
    line-height: 16px;
    text-decoration: none;
} */
.headerBackground {
    background-image: url('https://lh3.googleusercontent.com/N9C1I4LCiv9rV8SdLtK5svmaEJDTuoPue9XIFR4-em1Xwyf0rrDG2drECNIbbARJmWLPZnBzp3c-ERkBoy6QIrrJeIhEtgd6gfeCi5Eyaa6nDg_ab5_cdSkNF-6VG_KL1wydaekOZg=w2400');
    background-size: contain;
    width: auto;
    height: 300px;
    background-position: center;
    background-repeat: repeat-x;
}
.headerName {
    border-bottom: 1px solid black;

    padding-left: 50px;
    /* padding-top: 80px; */
    line-height: 22px;

    width: 100%;
    height: auto;
}
.topContainer {
    display: flex;
    align-content: baseline;
    justify-content: space-evenly;

    border-bottom: 1px solid black;

    padding-top: 30px;
    padding-bottom: 30px;

    max-width: 100%;
    width: auto;
    height: auto;
    /* border: 1px dotted black; */
}
#aboutMe {
    max-width: 100%;
    width: auto;
    height: auto;

    /* border: 1px dotted black; */
}
#projects {
    max-width: 100%;
    width: auto;
    height: auto;
}
.infoIcon {
    max-width: 200px;
    width: auto;
    height: auto;
    padding: 25px;
    border: 2px solid black;
    border-radius: 50%;
    background-color: orange;

    transform: scale(1);
    transition: .3s ease-in-out;
}
.firstParBio {
    font-size: 18px;
    line-height: 24px;
}
.secondParBio {
    font-size: 16px;;
    line-height: 22px;
}
.contactContainer {
    display: flex;
    align-content: baseline;
    justify-content: space-evenly;

    max-width: 100%;
    width: auto;
    height: auto;
    /* border-top: 1px dotted black; */
}
.contactIcon {
    max-width: 100px;
    width: auto;
    height: auto;
    padding: 12px;
    border: 2px solid black;
    background-color: orange;

    transform: scale(1);
    transition: .3s ease-in-out;
}
.topProjectContainer {
    max-width: 50%;
    width: auto;
}
.projectIcon {
    max-width: 200px;
    width: auto;
    height: auto;
    padding: 25px;
    border: 2px solid black;
    border-radius: 50%;
    background-color: orange;

    transform: scale(1);
    transition: .3s ease-in-out;
}

.bottomContainer {
    display: inline-flex;
    justify-content: space-evenly;
    padding: 80px;
    max-width: 100%;
    width: 100%;
}
.projectContainer {
    display: inline-block;
    max-width: 100%;
    width: auto;
    height: auto;
}
.quizImg {
    max-width: 400px;
    width: auto;
    padding: 15px;
    margin: 10px;

    float: left;

    transform: scale(1);
    transition: .3s ease-in-out;
}
.appTitle {
    font-size: 17px;
    line-height: 19px;
    text-decoration: underline;
}
.projectInfo {
    float: left;
    padding-left: 20px;
    font-size: 14px;
    line-height: 16px;
}
.githubLink {
    border: 1px dotted black;
    background-color: red;
    color: white;
}
.githubLink:hover {
    color: rgb(61, 9, 9);
    text-decoration: underline;
}
.contactIcon {
    border: 1px solid black;;
    border-radius: 50%;
}
.contactIcon:hover {
    background-color: #9d0f30;
    transform: scale(1.3);
}
.infoIcon:hover {
    background-color: red;
    transform: scale(1.3);
}
.quizImg:hover {
    transform: scale(1.3);
}
.projectIcon:hover {
    background-color: red;
    transform: scale(1.3);
}
footer {
    position: absolute;
    width: 100%;
}

.hide {
    display: none;
}
@media screen and (max-width: 1140px) {
    .quizImg {
        display: block;
        max-width: 80vw;
        width: auto;
        height: auto;
        margin-left: auto;
        margin-right: auto;
        float: none;
    }
    .projectInfo {
        font-size: 16px;
        text-align: center;
        float: none;

    }
}

@media screen and (max-width: 900px) {
    .topNav{
        width: 100%;
        height: auto;
        display: flex;
    }
    nav ul.topClickable {
        margin: 12px;
    }
    .clickable {
        padding: 20px;
        font-size: 16px;
        line-height: 16px;
        text-decoration: none;
        justify-content: center;
        align-content: center;
    }
    .clickable {
        padding: 10px;
        font-size: 3.5vw;
        line-height: 10px;
        text-decoration: none;
    }
    .headerName {
        text-align: center;
    }
    .topContainer {
        flex-shrink: 2;
        
    }
}
@media screen and (max-width: 700px) {
    .bottomContainer {
        padding: 20px;
    }
}
@media screen and (max-width: 450px) {
    .headerBackground {
        height: 50vw;
    }
    .headerName {
        font-size: 4vw;
    }
    .infoIcon {
        max-width: 160px;
        width: auto;
        height: auto;
    }
    .projectIcon {
        max-width: 160px;
        width: auto;
        height: auto;
    }
    .contactIcon {
        max-width: 23vw;
        width: auto;
        height: auto;
    }
}
@media screen and (max-width: 350px) {
    .infoIcon {
        max-width: 120px;
        width: auto;
        height: auto;
    }
    .projectIcon {
        max-width: 120px;
        width: auto;
        height: auto;
    }
    /* .contactIcon {
        max-width: 23vw;
        width: auto;
        height: auto;
    } */
}

